--- a/open-aiq/tsconfig.json
+++ b/open-aiq/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es2015",
         "module": "commonjs",
-        "outDir": "bin"
+        "outDir": "bin",
+        "sourceMap": true
     },
     "include": [
         "src/**/*"
